network-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-test
  template:
    metadata:
      labels:
        app: network-test
    spec:
      containers:
      - name: network-test
        image: nicolaka/netshoot
        command: ["/bin/bash","-c"]
        args:
        - while true; do sleep 3600; done
