deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: 308171262801.dkr.ecr.eu-west-2.amazonaws.com/direqtory-cont-dev:latest
          ports:
            - containerPort: 3000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
spec:
  selector:
    app: todo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule
  namespace: default 
  annotations:
    # specifies that its ALB
    kubernetes.io/ingress.class: "alb"
    # enable hhtps redirection
    alb.ingress.kubernetes.io/scheme: internet-facing 
    # subnet configuration 
    alb.ingress.kubernetes.io/subnets: subnet-0828ff7d94a218f7e,subnet-09bd4a559c9f4d005
    # alb listener ports
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # traffic routing 
    alb.ingress.kubernetes.io/target-type: instance
    # backend protocol
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    # https redirection
    alb.ingress.kubernetes.io/actions.redirect-to-https: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
spec:
  rules: 
  - host: k8s-default-todoapi-d9e96b13b3-49ada706f8b023c2.elb.eu-west-2.amazonaws.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-api
              port:
                number: 80
